add docker support

--- a/pkg/config/envs/dev.env
+++ b/pkg/config/envs/dev.env
@@ -1,3 +1,4 @@
 PORT=:50053
-DB_URL=postgres://jack:password@localhost:5432/testdb
+DB_URL=postgres://jack:password@192.168.1.102:5432/testdb
+#DB_URL=postgres://jack:password@localhost:5432/testdb
 PRODUCT_SVC_URL=localhost:50052
